2007-12-04  David Lawrence Ramsey  <pooka109@gmail.com>

	* nano.c (main), prompt.c (get_prompt_string), winio.c
	(do_replace_highlight): Per OKATA Akio's patch, with minor
	tweaks by me, add wnoutrefresh() calls after
	reset_(statusbar_)?cursor() calls, to ensure that the cursor is
	placed properly when using NetBSD curses.
	* nano.c (disable_mouse_support, enable_mouse_support): When
	toggling mouse support on or off, save and restore the mouse
	click interval.

2007-11-29  Jean-Philippe Guérard <jean-philippe.guerard@tigreraye.org>

	* doc/man/fr/*.1, doc/man/fr/nanorc.5: Fix copyright notices.
	The copyrights are disclaimed on these translations, but the
	copyrights of the untranslated works also apply.

2007-11-28  David Lawrence Ramsey  <pooka109@gmail.com>

	* doc/man/fr/nanorc.5: Remove trailing whitespace.

2007-11-17  David Lawrence Ramsey  <pooka109@gmail.com>

	* files.c (read_file): Improve autodetection of DOS and Mac
	format files to not trigger on carriage returns in the middle of
	files, as found by Kjell Braden.

2007-11-06  David Lawrence Ramsey  <pooka109@gmail.com>

	* doc/man/rnano.1, doc/man/fr/rnano.1: Update copyright notices,
	as Jordi Mallach's copyrights have now been assigned to the Free
	Software Foundation.

2007-11-05  David Lawrence Ramsey  <pooka109@gmail.com>

	* search.c (do_gotolinecolumn): Use a clearer error message if
	we enter an invalid line or column number, per Mike Melanson's
	suggestion.

2007-10-11  David Lawrence Ramsey  <pooka109@gmail.com>

	* doc/man/nano.1, doc/man/fr/nano.1, doc/texinfo/nano.texi,
	src/*.c, src/*.h: Update copyright notices, as Chris
	Allegretta's copyrights have now been assigned to the Free
	Software Foundation.
	* doc/man/nanorc.5, doc/man/fr/nanorc.5: Make copyright notices
	for these files consistent in style.
	* files.c (cwd_tab_completion): Remove unneeded assert.
	* files.c (username_tab_completion, cwd_tab_completion): Rename
	variable buflen to buf_len, for consistency.